# predictive-maintenance-for-grid-assets-condition-based-maintenance-with-classification-and-anomaly

./: PCA anomaly.ipynb  README.md  article.md  benchmark_rust.py  config.yaml  equipment_condition_classification.ipynb  equipment_condition_classification.py  pca_anomaly.py  predictive maintenance with PCA.ipynb  predictive maintenance with PCA.py  predictive_maintenance_pipeline.ipynb  predictive_maintenance_pipeline.py  pyproject.toml
10_Predictive-Maintenance-Time-Series/: generate_images.py
10_Predictive-Maintenance-Time-Series/code/: 10_Predictive-Maintenance-Time-Series.py
grid_pca_maintenance/: __init__.py  attention.py  attentionwithweights.py  create_pca_based_sequences.py  define_attention_layer_that_returns_both_context.py  load_dataset.py  lstm.py  notebook_step_014.py  predictive_maintenance_py.py  predictive_maintenance_py_2.py  predictive_maintenance_py_3.py  we_define_the_first_30_cycles_of_every_engine_as.py
grid_pca_maintenance/notebook_steps/: for_a_specific_engine.py  look_for_units_with_meaningful_prediction_moveme.py  main.py  make_lstm_sequences.py  make_multivariate_lstm_sequences.py  make_multivariate_sequences.py  make_pca_lstm_sequences.py  make_sequences.py  make_sure_you_re_only_looking_at_the_sensor_colu.py  make_unit_sequences.py  notebook_step_004.py  notebook_step_005.py  notebook_step_006.py  notebook_step_008.py  notebook_step_010.py  notebook_step_021.py  notebook_step_023.py  notebook_step_024.py  predict_and_plot.py  pseudo_code_for_llm_interaction.py  rebuild_lstm_sequences_from_this_engine.py  select_a_few_high_value_sensors.py  sort_descending_by_prediction_range.py
legacy/: predictive maintenance with PCA.py
rust/bench/: Cargo.toml
rust/bench/src/: main.rs
rust/core/: Cargo.toml
rust/core/src/: lib.rs
rust/py/: Cargo.toml
rust/py/src/: lib.rs
src/: compute_kernel.py
