[project]
name = "predictive-maintenance-for-grid-assets-condition-b"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.10.0",
    "pytest>=8.0",
    "lifelines>=0.30.3",
    "matplotlib>=3.10.9",
    "numpy>=2.4.4",
    "pandas>=2.3.3",
    "scikit-learn>=1.8.0",
    "scipy>=1.17.1",
    "statsmodels>=0.14.6",
    "tensorflow>=2.21.0",
    "torch>=2.12.0",
    "tqdm>=4.67.3",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[build-system]
requires = ["maturin>=1.7,<2.0"]
build-backend = "maturin"

# Optional Rust extension — build with:
#   pip install maturin && maturin develop --release -m rust/py/Cargo.toml
[tool.maturin]
manifest-path = "rust/py/Cargo.toml"
module-name = "predictive_maintenance_for_grid_assets_condition_based_maintenance_with_classification_and_anomaly_rs"

